--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ body{
   width: 700px;
   margin: 0 auto;
   display: flex;
+  margin-bottom: 30px
 }
 .movie1{
   width: 450px;
@@ -167,10 +168,6 @@ body{
   color: black;
   text-decoration: none;
 }
-.teacher2{
-  margin: 30px 0;
-  display: flex;
-}
 .movie2{
   width: 450px;
   height: 300px;
@@ -186,10 +183,6 @@ body{
   color: black;
   text-decoration: none;
 }
-.teacher3{
-  margin: 30px 0;
-  display: flex;
-}
 .movie3{
   width: 450px;
   height: 300px;
@@ -204,6 +197,12 @@ body{
 .name3 a{
   color: black;
   text-decoration: none;
+}
+.shishido{
+  width: 220px;
+  word-break: break-all;
+  text-align: center;
+  line-height: 1.5em;
 }
 .huma{
   color: rgb(59, 101, 216);
