--- a/style.css
+++ b/style.css
@@ -313,6 +313,10 @@ body{
     margin: 0 auto;
     text-align: center;
   }
+  .kenshisihdo{
+    margin: 0 auto;
+    text-align: center;
+  }
   .last{
     width: 350px;
   }
