--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ body{
     margin: 0 auto;
     text-align: center;
   }
-  .shisihdo{
+  .shishido{
     margin: 0 auto;
     text-align: center;
   }
