--- a/style.css
+++ b/style.css
@@ -211,6 +211,12 @@ body{
 .sato{
   text-align: left;
 }
+.hamahira{
+  width: 220px;
+  word-break: break-all;
+  text-align: center;
+  line-height: 1.5em;
+}
 .last{
   width: 700px;
   text-align: center;
